# solumicro

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.cache/clangd/index/: asset.h.37122AF411CA0128.idx  engine.c.72700E7149B45863.idx  game.c.399AE916D3FD580F.idx  game.h.180E8D25740B0B1A.idx  script.c.AB1E40B880021DB5.idx  script.h.CF0BB574E51CD92E.idx
sounds/: park.solu
src/: api.h  asset.c  asset.h  game.c  game.h  log.c  log.h  script.c  script.h
src/api/: api.c  collision.c  ctrl.c  graphics.c  kb_mouse.c  sound.c  state.c
targets/desktop/: CMakeLists.txt  instruments.sh
targets/vita/: CMakeLists.txt  format.sh
targets/vita/assets/: template.xml
targets/vita/include/: sounds
test/sounds/: park.solu
